# PassManagerWeb

./: .dockerignore  .env.prod  Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.prod.sh  nginx.conf  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: db_cleaner.yml  tests.yml
main/: asgi.py  settings.py  urls.py  wsgi.py
passmanager/: admin.py  apps.py  decorators.py  forms.py  models.py  urls.py  utils.py  views.py
passmanager/migrations/: 0002_item_owner.py  0003_item_last_modified.py  0004_rename_website_item_url.py  0005_alter_item_url.py  0006_alter_item_name_alter_item_notes_alter_item_password_and_more.py  0007_alter_item_url.py  0008_item_group.py  0009_alter_item_notes_alter_item_owner_and_more.py  0010_alter_item_notes.py  0011_remove_item_group.py  0012_rename_url_item_domain.py
passmanager/static/: main.css  main.js
passmanager/templatetags/: url_filters.py
passmanager/tests/: test_forms.py  test_models.py  test_views.py
static/: main.css  utils.js
static/js/: copyPassword.js  revealPassword.js
templates/: base.html
templates/email_templates/: 2fa_verification.html  delete_account_notification.html  new_user_registration.html  update_account_notification.html  update_master_password.html
templates/passmanager/: checkup.html  edit_item.html  import_csv.html  new_item.html  password_checkup.html  password_generator.html  vault.html
templates/users/: 2fa_verification.html  account.html  login.html  master_password_prompt.html  register.html  update_master_password.html
templates/vault/: checkup.html  edit_item.html  import_csv.html  new_item.html  vault.html
users/: admin.py  backends.py  forms.py  managers.py  middleware.py  models.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_otp_secret.py  0003_alter_customuser_otp_secret.py  0004_customuser_session_timeout.py  0005_customuser_enable_2fa.py  0006_alter_customuser_enable_2fa.py  0007_customuser_encryption_salt.py  0008_alter_customuser_encryption_salt.py  0009_customuser_allow_account_notifications.py  0010_customuser_allow_master_password_update_notifications.py  0011_remove_customuser_allow_account_notifications_and_more.py  0012_alter_customuser_allow_account_update_notifications_and_more.py  0013_remove_customuser_allow_account_update_notifications_and_more.py
users/tests/: test_admin.py  test_backends.py  test_commands.py  test_forms.py  test_managers.py  test_models.py  test_views.py
vault/: decorators.py  models.py  urls.py  views.py
vault/migrations/: 0001_initial.py  0002_item_owner.py  0003_item_last_modified.py  0004_rename_website_item_url.py  0005_alter_item_url.py  0007_alter_item_url.py  (+6 more)
(+26 files in other folders)
