[project]
name = "passmanagerweb"
version = "0.1.0"
description = "Self-hosted password manager for secure online credentials."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.1",
    "beautifulsoup4==4.14.2",
    "brotli==1.1.0",
    "cffi==2.0.0",
    "click==8.2.1",
    "crispy-bootstrap5==2025.6",
    "cryptography==45.0.7",
    "dj-database-url==3.0.1",
    "django==5.2.6",
    "django-appconf==1.1.0",
    "django-bootstrap5==25.2",
    "django-crispy-forms==2.4",
    "django-extensions==4.1",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "packaging==25.0",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pyotp==2.9.0",
    "python-dotenv==1.1.1",
    "requests>=2.32.5",
    "soupsieve==2.8",
    "sqlparse==0.5.3",
    "typing-extensions==4.15.0",
    "uvicorn==0.37.0",
    "zxcvbn>=4.5.0",
]
